Fix dropdown z-index issue, add text shadow to sidebar i.fa

--- a/client/scss/_dashboard.sidebar.scss
+++ b/client/scss/_dashboard.sidebar.scss
@@ -84,6 +84,11 @@
       color: #788195;
       font-size: 16px;
       font-weight: bold;
+      // -webkit-border-radius: 0.3em / 0.07em;
+      // -moz-border-radius: 0.3em / 0.07em;
+      // border-radius: 0.3em / 0.07em;
+      // text-shadow: 0px 1px 10px rgba(0, 0, 0, 0.19);
+      text-shadow: 0px 1px 10px rgba(16, 47, 54, 0.3);
 
       &.bg-transparent {
         -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.05, 0.74, 0.27, 0.99);
